src/objects/Zendesk__Zendesk_Sync_Job__c.object
<CustomObject>
    <fields>
        <fullName>Zendesk__Auto_Match_Batch_ID__c</fullName>
        <label>Auto Match Batch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Create_in_Zendesk_Batch_ID__c</fullName>
        <label>Create in Zendesk Batch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Create_in_Zendesk_Prepare_Batch_ID__c</fullName>
        <label>Create in Zendesk Prepare Batch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Create_in_Zendesk_Update_Batch_ID__c</fullName>
        <label>Create in Zendesk Update Batch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Create_record_in__c</fullName>
        <label>Create record in</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zendesk Support only</fullName>
                </value>
                <value>
                    <fullName>Salesforce only</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Manual_Match_Prepare_Batch_ID__c</fullName>
        <label>Manual Match Prepare Batch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Manual_Match_Update_Salesforce_Batch_ID__c</fullName>
        <label>Manual Match Update Salesforce Batch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Manual_Match_Update_Zendesk_Batch_ID__c</fullName>
        <label>Manual Match Update Zendesk Batch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Progress__c</fullName>
        <label>Progress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Match</fullName>
                </value>
                <value>
                    <fullName>Manual Match</fullName>
                </value>
                <value>
                    <fullName>Update in Salesforce</fullName>
                </value>
                <value>
                    <fullName>Manual Match Update Zendesk</fullName>
                </value>
                <value>
                    <fullName>Waiting for Create in Zendesk</fullName>
                </value>
                <value>
                    <fullName>Prepare for Create in Zendesk</fullName>
                </value>
                <value>
                    <fullName>Create in Zendesk</fullName>
                </value>
                <value>
                    <fullName>Salesforce Update for Record Created in Zendesk</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Summary</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>Manual Match Prepare Records</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Source_of_Truth__c</fullName>
        <label>Source of Truth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zendesk Support</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Aborted by user</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Sync_Direction__c</fullName>
        <label>Sync Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zendesk to Salesforce</fullName>
                </value>
                <value>
                    <fullName>Salesforce to Zendesk</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Sync_Mode__c</fullName>
        <label>Sync Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Import only</fullName>
                </value>
                <value>
                    <fullName>Full sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Sync_Object_Settings__c</fullName>
        <label>Sync Object Settings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account and Organization</fullName>
                </value>
                <value>
                    <fullName>Contact and User</fullName>
                </value>
                <value>
                    <fullName>Lead and User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Sync_Objects__c</fullName>
        <label>Sync Objects</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account and Organization</fullName>
                </value>
                <value>
                    <fullName>Contact and User</fullName>
                </value>
                <value>
                    <fullName>Lead and User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Total_Records_Auto_Matched__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records Auto Matched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Total_Records_Created_in_Salesforce__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records Created in Salesforce</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Total_Records_Created_in_Zendesk__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records Created in Zendesk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Total_Records_Manual_Matched__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records Manual Matched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Total_Records_Updated_in_Salesforce__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records Updated in Salesforce</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Total_Records_for_Auto_Match__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records for Auto Match</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Total_Records_for_Manual_Match__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records for Manual Match</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Total_Records_to_Create_in_Zendesk__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records to Create in Zendesk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Zendesk Sync Job</label>
    <listViews>
        <fullName>Zendesk__All</fullName>
        <columns>NAME</columns>
        <columns>Zendesk__Total_Records_Auto_Matched__c</columns>
        <columns>Zendesk__Total_Records_Created_in_Zendesk__c</columns>
        <columns>Zendesk__Total_Records_Created_in_Salesforce__c</columns>
        <columns>Zendesk__Sync_Objects__c</columns>
        <columns>Zendesk__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ZDSYNC-{0000}</displayFormat>
        <label>Zendesk Sync Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zendesk Sync Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>